<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.l0122075.humamalwi.tubes.ui_admin.home.HomeAdminFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home_admin" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.l0122075.humamalwi.tubes.ui_admin.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.l0122075.humamalwi.tubes.ui_admin.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
</navigation>