<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation2"
    app:startDestination="@+id/navigation_dashboard">
    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.l0122075.humamalwi.tubes.ui_user.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.l0122075.humamalwi.tubes.ui_user.home.HomeUserFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home_user" />



    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.l0122075.humamalwi.tubes.ui_user.notifications.ProfileFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_profile" />
</navigation>